#4557 - Survey logo size and alignment Fixes #4557

--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -2,8 +2,7 @@
   display: flex;
 }
 .sd-title {
-  display: flex;
-  align-items: center;
+  display: block;
   font-family: $font-family;
   font-style: normal;
   color: $foreground;
@@ -14,6 +13,7 @@
 
 .sd-title.sd-container-modern__title {
   display: flex;
+  align-items: center;
   padding: var(--sd-page-vertical-padding) var(--sd-page-vertical-padding);
   overflow: auto;
   font-family: $font-family;
